--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="scoreBarWrapper">
-        <span class="gamesWonWrapper">Games won: <span class="gamesWonValue"></span></span>
-        <span class="gamesLostWrapper">Games lost: <span class="gamesLostValue"></span>
+        <span class="gamesWonWrapper">Games won:
+            <span class="gamesWonValue"></span>
+        </span>
+        <span class="gamesLostWrapper">Games lost:
+            <span class="gamesLostValue"></span>
+        </span>
         <button class="resetGame" onclick="resetGame()">Reset</button>
     </div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
 </body>
+
 </html>
